--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,494 @@
-.App {
-  text-align: center;
+/* Top Navigation */
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: lightgray;
+    height: 10vmin;
+    font-size: 3.5vmin;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.top-bar-logo {
+    height: 6vmin;
+    width: 6vmin;
+    border-radius: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.top-bar-name-and-logo {
+    display: flex;
+    align-items: center;
+}
+
+.top-bar-logo {
+    margin-right: 4vmin;
+    margin-left: 4vmin;
+}
+
+.top-bar-careers {
+    margin-right: 10vmin;
+    font-size: 2vmin;
+    text-decoration: none;
+    color: black;
+}
+
+.top-bar-careers:hover {
+    color: gray;
+}
+
+/* Main Content */
+.main-content {
+    display: flex;
+    width: 100%;
+    height: 82vmin;
+    background-color: white;
+}
+
+.main-text {
+    padding-top: 23vmin;
+    margin-left: 17vmin;
+    width: 60vmin;
+}
+
+.head-text {
+    font-size: 8vmin;
+}
+
+.sub-text {
+    font-size: 3vmin;
+}
+
+.main-iphone {
+    z-index: 2;
+    height: 80vmin;
+    width: 40vmin;
+    border-radius: 20px;
+    margin-left: 22vmin;
+    margin-top: 7.5vmin;
+}
+
+/* Banner */
+.banner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: lightgray;
+    width: 100%;
+    height: 25vmin;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.banner img {
+    display: inline-block;
+    animation: scrollImages 25s linear infinite;
+    margin: 3vmin;
+    height: 15vmin;
+    width: 40vmin;
   }
+
+@keyframes scrollImages {
+    0% {
+        transform: translateX(1000%);
+    }
+    100% {
+        transform: translateX(-1000%);
+    }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Section Tabs */
+.sections {
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    padding: 10vmin;
 }
 
-.App-link {
-  color: #61dafb;
+.section {
+    height: 50vmin;
+    width: 35vmin;
+    border-radius: 30px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section:hover {
+    background-color: lightgray;
 }
+
+.section img {
+    height: 15vmin;
+    width: 15vmin;
+    border-radius: 50%;
+    margin-top: 2vmin;
+}
+
+.section-head-text {
+    font-size: 4vmin;
+    font-weight: bold;
+    margin-top: 2vmin;
+}
+
+.section-sub-text {
+    font-size: 2.7vmin;
+    margin-top: 2vmin;
+}
+
+/* Sections */
+#section-one, #section-two, #section-three {
+    display: flex;
+    background-color: white;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-top: 5vmin;
+    padding-bottom: 20vmin;
+}
+
+.section-one-text, .section-two-text, .section-three-text {
+    width: 40vmin;
+}
+
+.section-one-head-text, .section-two-head-text, .section-three-head-text {
+    font-size: 4vmin;
+    font-weight: bold;
+}
+
+.section-one-sub-text, .section-two-sub-text, .section-three-sub-text {
+    font-size: 2.7vmin;
+}
+
+.section-one-iphone, .section-two-iphone, .section-three-iphone {
+    height: 50vmin;
+    width: 25vmin;
+    border-radius: 20px;
+}
+
+/* User Sections */
+.users {
+    background-color: gray;
+    text-align: center;
+}
+
+.user-sections {
+    display: flex;
+    justify-content: space-between;
+    padding: 10vmin;
+    padding-top: 0px;
+}
+
+.user-section {
+    height: 50vmin;
+    width: 35vmin;
+    border-radius: 30px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    background-color: lightgray;
+}
+
+.user-section img {
+    height: 15vmin;
+    width: 15vmin;
+    border-radius: 50%;
+    margin-top: 2vmin;
+    margin-bottom: 4vmin;
+}
+
+.title-user-section {
+    font-size: 4vmin;
+    font-weight: bold;
+    padding-top: 2vmin;
+    padding-bottom: 7vmin;
+}
+
+/* Video Section */
+#video-section {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+    padding-top: 9vmin;
+    padding-bottom: 9vmin;
+}
+
+.video {
+    width: 80vmin;
+    height: 50vmin;
+    border-radius: 20px;
+    background-color: lightgray;
+}
+
+.video-text {
+    width: 40vmin;
+}
+
+.video-head-text {
+    font-size: 4vmin;
+    font-weight: bold;
+}
+
+.video-sub-text {
+    font-size: 2.7vmin;
+    margin-top: 2vmin;
+}
+
+/* About Section */
+.about {
+    background-color: lightgray;
+    padding-bottom: 8vmin;
+    
+}
+
+.about-title {
+    padding-top: 6vmin;
+    text-align: center;
+    font-size: 4vmin;
+    font-weight: bold;
+}
+
+.about-desc {
+    font-size: 2.7vmin;
+    margin-top: 4vmin;
+    text-align: center;
+    margin-right: 15vmin;
+    margin-left: 15vmin;
+}
+
+.scroll-images {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10vmin;
+}
+
+.about-images {
+    height: 50vmin;
+    width: 80vmin;
+    border-radius: 2vmin;
+}
+
+.about-left-button, .about-right-button {
+    height: 10vmin;
+    width: 5vmin;
+    border-radius: 1vmin;
+    border: none;
+}
+
+.about-left-button:hover, .about-right-button:hover {
+    background-color: gray;
+}
+
+.about-left-button {
+    margin-left: 4vmin;
+}
+
+.about-right-button {
+    margin-right: 4vmin;
+}
+
+/* Ready To Download Section */
+.ready {
+    text-align: center;
+    padding-bottom: 20vmin;
+    background-color: white;
+}
+
+.ready-title {
+    padding-top: 4vmin;
+    font-size: 4vmin;
+    font-weight: bold;
+}
+
+.ready-desc {
+    margin-top: 3vmin;
+    font-size: 2.7vmin;
+}
+
+.ready-apps {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 5vmin;
+}
+
+.ready-app img {
+    height: 7vmin;
+    width: 20vmin;
+    border-radius: 1vmin;
+}
+
+/* Contact Us */
+.contact {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: lightgray;
+
+    padding-top: 8vmin;
+    padding-bottom: 15vmin;
+}
+
+.contact-us {
+    width: 60vmin;
+}
+
+.contact-title {
+    font-size: 5vmin;
+    font-weight: bold;
+}
+
+.contact-desc {
+    font-size: 2.7vmin;
+    margin-top: 4vmin;
+}
+
+.first-and-last-input {
+    display: flex;
+    justify-content: center;
+}
+
+#first-name {
+    margin-right: 3vmin;
+}
+
+#first-name input, #last-name input {
+    height: 3.3vmin;
+    width: 23vmin;
+}
+
+.contact-info {
+    margin-top: 1.5vmin;
+}
+
+.contact-info div {
+    font-size: 1.7vmin;
+    color: gray;
+    margin-bottom: 0.4vmin;
+}
+
+.contact-info input {
+    border: none;
+    border-radius: 0.8vmin;
+    height: 3.3vmin;
+    width: 49.5555999vmin;
+}
+
+#message input {
+    height: 8vmin;
+}
+
+.message-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.send {
+    margin-top: 3vmin;
+}
+
+.send input {
+    height: 5vmin;
+    width: 49.5555999vmin;
+    border-radius: 1vmin;
+    border: none;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+}
+
+/* Horizontial Line */
+.horizontial-line {
+    height: 0.25vmin;
+    background-color: gray;
+    color: gray;
+    padding: 0px, 0px;
+    margin: 0 0;
+}
+
+/* Company Info */
+.info {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 7vmin;
+    padding-bottom: 7vmin;
+    background-color: white;
+}
+
+.info-logo {
+    height: 13vmin;
+    width: 13vmin;
+    border-radius: 50%;
+}
+
+.info-company-name {
+    margin-top: 2vmin;
+    font-size: 2.8vmin;
+    font-weight: bold;
+}
+
+.info-text {
+    margin-top: 2vmin;
+}
+
+.info-apps {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 5vmin;
+}
+
+.info-app img {
+    height: 9vmin;
+    width: 25vmin;
+    border-radius: 1vmin;
+    margin-right: 5vmin;
+}
+
+.info-right {
+    display: flex;
+    justify-content: space-between;
+}
+
+.info-right-title {
+    font-size: 3vmin;
+    font-weight: bold;
+}
+
+.info-right div {
+    margin-right: 7vmin;
+}
+
+.column-three {
+    margin-right: 0vmin;
+}
+
+.info-right div div {
+    margin-bottom: 4vmin;
+}
+
+.info-sub-text {
+    font-size: 2.5vmin;
+}
+
+.ingo-socials {
+    display: flex;
+    align-items: center;
+}
+
+.info-socials a img {
+    margin-right: 2vmin;
+    height: 4vmin;
+    width: 4vmin;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+/* rgb(238, 148, 43), gradient: 237, 148, 66 //// 255 102 115 */
+
