--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  font-family: "Anvir", sans-serif;
+  font-family: "Avenir", sans-serif;
   padding: 0px;
   margin: 0px;
   letter-spacing: 0.10vmin;
