--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,8 @@
     --red-text: rgb(255, 102, 115);
     --orange-text: rgb(237, 148, 66);
 
+    --hover-white-text: rgb(187, 187, 187);
+
     /* Background Colors */
     --black-background: #181818;
     --tan-background: #FDF5EA;
@@ -49,6 +51,7 @@ html {
     padding: 0px;
     scroll-behavior: smooth;
     letter-spacing: 0.10vmin;
+    cursor: default;
 }
 
 body {
@@ -82,6 +85,10 @@ body {
     margin: 0vmin 1vmin;
 }
 
+.name-and-logo img:hover {
+    animation: dog-bark 0.5s infinite;
+}
+
 .name-and-logo div {
     color: var(--white-text);
     font-size: 2.6vmin;
@@ -95,8 +102,8 @@ body {
     color: var(--white-text);
 }
 
-#careers:hover {
-    color: lightgray;
+.careers:hover {
+    color: var(--hover-white-text);
 }
 
 /* Landing Content */
@@ -116,7 +123,11 @@ body {
 .landing-text .head-text {
     font-family: 'AvenirBlack';
     font-size: 8vmin;
-    font-weight: bold;
+    transition: transform 0.5s ease-in-out;
+}
+
+.landing-text .head-text:hover {
+    transform: scale(1.05);
 }
 
 .landing-text .sub-text {
@@ -141,6 +152,10 @@ body {
     height: 7.5vmin;
     width: 24vmin;
     border-radius: 1vmin;
+}
+
+.landing-ios-app img:hover {
+    animation: shake 0.5s infinite;
 }
 
 /* Responsive Landing Screen */
@@ -244,6 +259,7 @@ body {
     color: black;
     padding: 2vmin;
     width: 32vmin;
+    transition: transform 0.3s ease-in-out;
 }
 
 #middle-section {
@@ -253,6 +269,7 @@ body {
 
 .section:hover {
     background-color: lightgray;
+    transform: scale(1.05);
 }
 
 .section img {
@@ -304,6 +321,11 @@ body {
 .section-one-head-text, .section-two-head-text, .section-three-head-text {
     font-size: 4vmin;
     font-family: 'AvenirBlack';
+    transition: transform 0.5s ease-in-out;
+}
+
+.section-one-head-text:hover, .section-two-head-text:hover, .section-three-head-text:hover {
+    transform: scale(1.05);
 }
 
 .section-one-sub-text, .section-two-sub-text, .section-three-sub-text {
@@ -313,10 +335,38 @@ body {
     line-height: 4vmin;
 }
 
+/*
 .section-one-iphone, .section-two-iphone, .section-three-iphone {
     height: 50vmin;
     width: 25vmin;
     border-radius: 20px;
+    transition: transform 0.5s ease-in-out;
+}
+*/
+.section-one-iphone {
+    height: 25vmin;
+    width: 50vmin;
+    border-radius: 20px;
+    transition: transform 0.5s ease-in-out;
+}
+
+.section-two-iphone {
+    height: 45vmin;
+    width: 35vmin;
+    border-radius: 20px;
+    transition: transform 0.5s ease-in-out;
+}
+
+.section-three-iphone {
+    height: 40vmin;
+    width: 50vmin;
+    border-radius: 20px;
+    transition: transform 0.5s ease-in-out;
+}
+
+
+.section-one-iphone:hover, .section-two-iphone:hover, .section-three-iphone:hover {
+    transform: scale(1.05);
 }
 
 .small-section-one-sub-text, .small-section-two-sub-text, .small-section-three-sub-text {
@@ -376,6 +426,11 @@ body {
     background-color: white;
     padding: 3vmin;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    transition: transform 0.5s ease-in-out;
+}
+
+.user-section:hover {
+    transform: scale(1.03);
 }
 
 .user-section img {
@@ -391,6 +446,13 @@ body {
     font-size: 4vmin;
     padding-top: 6vmin;
     color: var(--white-text);
+    transition: transform 0.5s ease-in-out;
+    width: 70vmin;
+    margin: auto auto;
+}
+
+.title-user-section:hover {
+    transform: scale(1.05);
 }
 
 .sub-title-user-section {
@@ -471,7 +533,6 @@ body {
 /* About Section */
 .about {
     background-color: var(--black-background);
-    padding-bottom: 8vmin;
 }
 
 .about-title {
@@ -479,7 +540,13 @@ body {
     padding-top: 6vmin;
     text-align: center;
     font-size: 5vmin;
-    font-weight: bold;
+    transition: transform 0.5s ease-in-out;
+    width: 70vmin;
+    margin: auto auto;
+}
+
+.about-title:hover {
+    transform: scale(1.05);
 }
 
 .about-desc {
@@ -492,53 +559,32 @@ body {
     margin-left: 15vmin;
 }
 
-.scroll-images {
-    margin-top: 8vmin;
+#scroll-images {
     width: 100%;
     overflow-x: auto;
     white-space: nowrap;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    scroll-behavior: smooth;
 }
 
-.scroll-images::-webkit-scrollbar {
+#scroll-images::-webkit-scrollbar {
     display: none;
 }
 
-.scroll-images::before {
-    content: "";
-    flex: 0 0 232%; /* This percent centers the first image */
-}
-
-.item {
-    display: inline-block;
-    margin-right: 15vmin;
-}
-
-.about-images {
-    height: 50vmin;
+.about-image {
+    flex-shrink: 0;
     width: 80vmin;
+    height: 50vmin;
+    margin: 7vmin 5vmin;
     border-radius: 2vmin;
+    transition: transform 0.5s ease-in-out;
 }
 
-.about-left-button, .about-right-button {
-    height: 10vmin;
-    width: 5vmin;
-    border-radius: 1vmin;
-    border: none;
+.about-image:hover {
+    transform: scale(1.05);
 }
-
-.about-left-button:hover, .about-right-button:hover {
-    background-color: gray;
-}
-
-.about-left-button {
-    margin-left: 4vmin;
-}
-
-.about-right-button {
-    margin-right: 4vmin;
-}
+  
 
 /* Ready To Download Section */
 .ready {
@@ -551,7 +597,13 @@ body {
     font-family: "AvenirBlack";
     padding-top: 4vmin;
     font-size: 4vmin;
-    font-weight: bold;
+    width: 70vmin;
+    margin: auto auto;
+    transition: transform 0.5s ease-in-out;
+}
+
+.ready-title:hover {
+    transform: scale(1.05);
 }
 
 .ready-desc {
@@ -562,14 +614,23 @@ body {
 
 .ready-apps {
     display: flex;
-    justify-content: center;
     margin-top: 5vmin;
+    justify-content: center;
+}
+
+.ready-apple {
+    margin-right: 10vmin;
+}
+
+.ready-app:hover {
+    animation: shake 0.5s infinite;
 }
 
 .ready-app img {
     height: 9vmin;
     width: 25vmin;
     border-radius: 1vmin;
+    cursor: pointer;
 }
 
 .ready-app button {
@@ -591,7 +652,7 @@ body {
     margin-top: 5vmin;
     width: 50%;
     border-radius: 2vmin;
-    height: 70vmin;
+    height: 50%;
 }
 
 /* Contact Us */
@@ -618,9 +679,13 @@ body {
 
 .contact-title {
     font-size: 5vmin;
-    font-weight: bold;
     text-align: center;
     font-family: "AvenirBlack";
+    transition: transform 0.5s ease-in-out;
+}
+
+.contact-title:hover {
+    transform: scale(1.05);
 }
 
 .contact-desc {
@@ -654,6 +719,7 @@ body {
 }
 
 .contact-info div {
+    font-family: "AvenirBook";
     font-size: 2vmin;
     margin-bottom: 0.4vmin;
 }
@@ -664,16 +730,27 @@ body {
     border-radius: 0.8vmin;
     height: 3.3vmin;
     width: 70vmin;
+    font-family: "AvenirBook";
+    font-size: 2vmin;
+}
+
+.contact-info input:focus {
+    outline: solid var(--orange-text);
 }
 
 .at-email {
-    color: var(--red-text);
+    color: var(--orange-text);
     font-weight: bold;
 }
 
 #message input {
     background-color: lightgray;
     padding-bottom: 7vmin;
+    font-size: 2vmin;
+}
+
+#message input:focus {
+    outline: solid var(--red-text);
 }
 
 .message-form {
@@ -694,9 +771,16 @@ body {
     border-radius: 1vmin;
     border: none;
     color: white;
-    font-size: 2vmin;
+    font-size: 2.5vmin;
     font-weight: bold;
     background: linear-gradient(to right, rgb(237, 148, 66) 0%, rgb(255, 102, 115) 100%);
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.send input:hover {
+    background: linear-gradient(to right, rgb(221, 138, 61) 0%, rgb(241, 97, 109) 100%);
+    transform: scale(1.03);
 }
 
 @media(max-width: 820px) {
@@ -728,6 +812,9 @@ body {
 }
 
 .info-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-left: 5vmin;
     margin-right: 8vmin;
 }
@@ -735,12 +822,25 @@ body {
 .info-logo {
     height: 13vmin;
     width: 13vmin;
+
+}
+
+.info-logo:hover {
+    animation: dog-bark 0.5s infinite;
+}
+
+@keyframes dog-bark {
+    0% { transform: scaleX(1); }
+    20% { transform: scaleX(1.05); }
+    40% { transform: scaleX(1.1); }
+    60% { transform: scaleX(1.15); }
+    80% { transform: scaleX(1.1); }
+    100% { transform: scaleX(1.15); }
 }
 
 .info-company-name {
     margin-top: -2vmin;
     font-size: 2.8vmin;
-    font-weight: bold;
 }
 
 .info-text {
@@ -756,11 +856,27 @@ body {
     margin-top: 5vmin;
 }
 
+.info-app {
+    transition: transform 0.3s ease-in-out;
+}
+
+.info-app:hover {
+    transform: scale(1.05);
+    animation: shake 0.5s infinite;
+}
+
+@keyframes shake {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-5px) rotate(-5deg); }
+    50% { transform: translateX(5px) rotate(5deg); }
+    75% { transform: translateX(-5px) rotate(-5deg); }
+    100% { transform: translateX(0); }
+}
+
 .info-app img {
     height: 7vmin;
     width: 20vmin;
     border-radius: 1vmin;
-    margin-right: 5vmin;
 }
 
 .info-app-play img {
@@ -776,6 +892,12 @@ body {
 .info-right-title {
     font-size: 3vmin;
     font-weight: bold;
+
+    transition: transform 0.3s ease-in-out;
+}
+
+.info-right-title:hover {
+    transform: scale(1.05);
 }
 
 .middle-info {
@@ -794,11 +916,20 @@ body {
 .info-sub-text {
     font-size: 2.5vmin;
     width: 17vmin;
+    transition: transform 0.3s ease-in-out;
 }
 
 .info-sub-text a {
     text-decoration: none;
-    color: white;
+    color: var(--white-text);
+}
+
+.info-sub-text:hover {
+    transform: scale(1.05);
+}
+
+.info-sub-text a:hover {  
+    color: var(--hover-white-text);
 }
 
 .small-info {
